# research_proj_template

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml
configs/exp/: baseline.yaml  main.yaml
scripts/: benchmark.py  eval.py  run_demo.py  train.py
src/research_proj_template/: __init__.py  cli.py  config.py  runner.py
src/research_proj_template/datasets/: __init__.py
src/research_proj_template/metrics/: __init__.py
src/research_proj_template/models/: __init__.py
src/research_proj_template/pipelines/: __init__.py
src/research_proj_template/utils/: __init__.py
tests/: test_smoke.py
